[tool.poetry]
name = "memreps"
version = "0.1.0"
description = "Algorithm for learning from comparision and membership queries."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.10"
exp4 = "^0.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
