[tool.poetry]
name = "memreps"
version = "0.1.0"
description = "Algorithm for learning from comparision and membership queries."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.10"
exp4 = "^0.1.3"
attr = "^0.3.1"
funcy = "^1.16"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest-flake8 = "^1.0.7"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
