[tool.poetry]
name = "memreps"
version = "0.1.0"
description = "Algorithm for learning from comparision and membership queries."
authors = ["anonymous"]
license = "MIT"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.9"
exp4 = "^0.1.3"
attr = "^0.3.1"
funcy = "^1.16"
hasse = "^0.1.2"
dfa = "4.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest-flake8 = "^1.0.7"
pytest = "^6.2.4"
dfa-identify = {git = "https://github.com/mvcisback/dfa-identify", rev = "preferences"}
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
